Refactor BoxFS for cleaner code and better consistency
- Unify copy/move target validation in prepareTarget() with POSIX type checks
- Replace isEmpty()+get() pattern with orElseThrow() throughout
- Optimize extent navigation from O(n²) to O(n) using ExtentRange
- Replace custom globToRegex with JDK's Globs implementation
- Simplify BoxDirectoryStream to pre-filter and use list iterator
- Add @NotNull annotations and Objects.requireNonNull() validation
- Remove dead code in BoxSeekableByteChannel option parsing
- Remove redundant empty check in BoxPath.relativize()
- Add documentation for validation strategy and helper methods
- Update STORAGE.md formatting

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>